@@ -1,0 +1,2 @@
+export const RECONNECT_BANNER = 'stripe-reconnect';
+export const NEW_CHECKOUT_EXPERIENCE_BANNER = 'new-checkout-experience';
